--- a/css/main.css
+++ b/css/main.css
@@ -773,3 +773,47 @@ animation: shake .5s linear;
     display: flex;
     flex-direction: row;
 }
+
+.button-1{
+    display:inline-block;
+    padding:0.46em 1.6em;
+    border:0.1em solid #000000;
+    margin:0 0.2em 0.2em 0;
+    border-radius:0.12em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    font-weight:300;
+    color:#000000;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    background-color: var(--themeColor);
+    text-align:center;
+    transition: all 0.15s;
+}
+
+.button-1:hover{
+    text-shadow: 0 0 2em rgba(255,255,255,1);
+    color:#FFFFFF;
+    border-color:#FFFFFF;
+}
+
+.button-2{
+    display:inline-block;
+    padding: 15px 35px;
+    margin: 10px 5px;
+    border-radius:0.15em;
+    box-sizing: border-box;
+    text-decoration:none;
+    font-family:'Roboto',sans-serif;
+    text-transform:uppercase;
+    font-weight:400;
+    color:#FFFFFF;
+    /* background-color:#3369ff; */
+    background-color: var(--themeColor);
+    box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
+    text-align:center;
+    position:relative;
+}
+.button-2:active{
+    top:0.1em;
+}
