--- a/css/checkers.css
+++ b/css/checkers.css
@@ -199,7 +199,7 @@ border: 1px solid black;
 
 #checkers-game-container{
     position: relative;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: fit-content;
     margin: auto;
 }
@@ -236,4 +236,23 @@ position: relative;
     position: absolute;
     background-color: lightgray;
     border: 1px solid black;
+}
+
+.game-initiation-form-container{
+    display: flex;
+    flex-direction: column;
+    width: 70%;
+    align-items: center;
+    margin: 10px auto;
+}
+
+.game-initiation-form-container input{
+    width: 100%;
+    height: 30px;
+    font-size: 15px;
+    padding: 5px 10px;
+    outline: none;
+    border-radius: 5px;
+    margin: 5px 0 0 0;
+    border: 1px solid darkgray;
 }
