--- a/new-website/css/index.css
+++ b/new-website/css/index.css
@@ -5,6 +5,23 @@
  --standard-mobile-padding: 8px;
 }
 
+#work-carousel{
+ overflow-x: scroll;
+ display: flex;
+ flex-direction: row;
+ width: fit-content;
+ /* scroll-snap-type: x mandatory ; */
+ margin: 0 auto calc(var(--standard-mobile-padding)*2) auto;
+}
+
+
+@media only screen and (min-width: 1025px){
+ #work-carousel{
+  scroll-snap-type: none ;
+  justify-content: center;
+ }
+}
+
 .google-maps-background-container{
  width: 100%;
  height: 330px;
@@ -66,16 +83,14 @@
  text-align: center;
 }
 
-#work-carousel{
- overflow-x: scroll;
- display: flex;
- flex-direction: row;
- scroll-snap-type: x mandatory ;
- margin: 0 auto;
+
+
+#work-carousel::-webkit-scrollbar {
+ display: none;
 }
 
 .work-carousel-item{
- scroll-snap-align: start;
+ /* scroll-snap-align: start; */
  display: flex;
  flex-direction: column;
  width: var(--carousel-item-width);
@@ -104,7 +119,7 @@
 }
 
 #resume{
- max-width: 520px;
+ /* max-width: 520px; */
  
 }
 
