--- a/new-website/css/terminal.css
+++ b/new-website/css/terminal.css
@@ -50,7 +50,8 @@ body{
  border-left: .5px solid var(--terminalBodyBorderColor);
  border-right: .5px solid var(--terminalBodyBorderColor);
  border-bottom: .5px solid var(--terminalBodyBorderColor);
- opacity: .95;
+ overflow-y: scroll;
+ opacity: .90;
 
 }
 .terminal-title-navigation-buttons{
@@ -157,6 +158,7 @@ input, input:focus{
 .terminal-text-content{
   width: 100%;
   overflow-wrap: anywhere;
+  line-height: 1em;
 }
 
 
