--- a/new-website/css/global.css
+++ b/new-website/css/global.css
@@ -1,36 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:wght@500&display=swap");
 
-*{
- padding: 0px;
- margin: 0px;
- text-decoration: none;
- font-family:  'Fira Sans';
+* {
+	padding: 0px;
+	margin: 0px;
+	text-decoration: none;
 }
 
-:root{
- --cellularMaxWidth: 425px;
- --tabletMaxWidth: 1024px;
+:root {
+	--cellularMaxWidth: 425px;
+	--tabletMaxWidth: 1024px;
 }
- a{
-  display: inline-block;
- }
-
-#page-content{
- max-width: 1250px;
- margin-left: auto;
- margin-right: auto;
- overflow: hidden;
-}
-#page-content > *{
- max-width: inherit;
+a {
+	display: inline-block;
 }
 
-
-.horizontal-centered{
- margin-left: auto;
- margin-right: auto;
+#page-content {
+	max-width: 1250px;
+	margin-left: auto;
+	margin-right: auto;
+	overflow: hidden;
 }
 
-.text-centered{
- text-align: center;
+.horizontal-centered {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.text-centered {
+	text-align: center;
+}
+
+.text-justify {
+	text-align: justify;
+}
+
+#page-content {
+	min-width: 320px;
+}
+
+.gray-text {
+	color: #484848;
 }
